--- a/cerberus_universal_backend/docker-compose.yml
+++ b/cerberus_universal_backend/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - GCP_PROJECT=cerberus-data-cloud
     command: >
       sh -c "
-      flask db upgrade &&
+      python check_db.py || flask db upgrade &&
       gunicorn --bind '0.0.0.0:8080' --workers 1 --threads 8 --timeout 0 'run:app'
       "
   db:
