--- a/cerberus_universal_backend/docker-compose.yml
+++ b/cerberus_universal_backend/docker-compose.yml
@@ -21,6 +21,9 @@ services:
       - DB_NAME=testdb
       - DB_CONNECTION_NAME=test-connection
       - GCP_PROJECT=cerberus-data-cloud
+      - POSTGRES_USER=test_user
+      - POSTGRES_PASSWORD=test_password
+      - POSTGRES_DB=test_db
     command: >
       sh -c "
       python check_db.py || flask db upgrade &&
