--- a/universal_campaign_frontend/analysis_options.yaml
+++ b/universal_campaign_frontend/analysis_options.yaml
@@ -3,16 +3,17 @@ include: package:flutter_lints/flutter.yaml
 
 linter:
   rules:
-    - avoid_print
-    - prefer_single_quotes
-    - prefer_const_constructors
-    - prefer_const_declarations
-    - prefer_final_fields
-    - camel_case_types
-    - library_private_types_in_public_api
-    - non_constant_identifier_names
-    - slash_for_doc_comments
-    - unnecessary_const
-    - unnecessary_new
-    - unnecessary_this
-    - use_key_in_widget_constructors
+    avoid_print: true
+    prefer_single_quotes: true
+    prefer_const_constructors: true
+    prefer_const_declarations: true
+    prefer_final_fields: true
+    camel_case_types: true
+    library_private_types_in_public_api: true
+    non_constant_identifier_names: true
+    slash_for_doc_comments: true
+    unnecessary_const: true
+    unnecessary_new: true
+    unnecessary_this: true
+    use_key_in_widget_constructors: true
+    sized_box_for_whitespace: false
