--- a/universal_campaign_frontend/web/manifest.json
+++ b/universal_campaign_frontend/web/manifest.json
@@ -10,12 +10,12 @@
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "assets/favicons/Blair_Favicon.png",
+            "src": "favicon.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "assets/favicons/Blair_Favicon.png",
+            "src": "favicon.png",
             "sizes": "512x512",
             "type": "image/png"
         }
