--- a/universal_campaign_frontend/assets/default_config.json
+++ b/universal_campaign_frontend/assets/default_config.json
@@ -42,7 +42,7 @@
   },
   "content": {
     "siteTitle": "Bea Cox for JP 4, 2",
-    "faviconImagePath": "assets/favicons/Cox_Favicon.png",
+    "faviconImagePath": "favicon.png",
     "launchStatus": true,
     "comingSoonPage": {
       "title": "Our campaign is launching soon!",
