--- a/universal_campaign_frontend/assets/emmons_config.json
+++ b/universal_campaign_frontend/assets/emmons_config.json
@@ -42,7 +42,7 @@
   },
   "content": {
     "siteTitle": "Curtis Emmons for County Commissioner",
-    "faviconImagePath": "/assets/favicons/Emmons_Favicon.png",
+    "faviconImagePath": "favicon.png",
     "launchStatus": false,
     "comingSoonPage": {
       "title": "Our new website is coming soon!",
